# pydantic-forms

./: .gitignore  .readthedocs.yaml  Readme.rst  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  fastapi_example.py  index.rst  strategies.rst
pydantic_forms/: __init__.py  forms.py  interfaces.py  objects.py  services.py  strategies.py
pydantic_forms/tests/: conftest.py  test_aggregates.py  test_services.py
